--- a/medial-queries1/index.html
+++ b/medial-queries1/index.html
@@ -7,9 +7,11 @@
   </head>
   <body>
     <div class="container">
-      <div class="a"></div>
-      <div class="b"></div>
-      <div class="c"></div>
+      <div class="block-a">a</div>
     </div>
-  </body>
+    <div class="contain">
+      <div class="block-b">b</div>
+      <div class="block-c">c</div>
+    </div>
+    </body>  
 </html>
